fix: align My Apps dropdown box

--- a/Main/Main.css
+++ b/Main/Main.css
@@ -87,8 +87,8 @@
 	display: none;
 	z-index: 100;
 	position: absolute;
-	width: 120px; 
-	margin-left: -85px;
+	/*width: 120px; */
+	/*margin-left: -85px;*/
 	margin-top: 5px;
 	border: 1px solid #ccc !important;
 	padding-left: 5px;
@@ -96,25 +96,22 @@
 	padding-bottom: 0px;
 	cursor: default;
 	overflow: inherit;
+	/*text-align: center;*/
 }
 /*MAY NEED A VERSION FOR APPS MENU*/
 .dropPict:hover .dropdown-content {
     display: inline-block;
 }
 
-.dropdown_pin{
-	margin-top: -15px;
-	margin-left: 10px;
-}
 
 .FirstSection{
-	display: inline;
-	margin: 5px;
+	display: inline-block;
+	margin: 0px;
 }
 
 .SecondSection{
-	display: inline;
-	margin: 5px;
+	display: inline-block;
+	margin: 0px;
 }
 /*More button has to become a link and redirect to my mobile Apps repository on git hub*/
 
@@ -124,6 +121,9 @@
 	padding: 0px;
 	float: center;
 	text-align: center;
+	background-color: #f5f5f5;
+	height: 40px;
+	overflow: hidden
 }
 /*Dropdown button when screen size is small*/
 @media (max-width: 960px) {
