--- a/Main/MyApps.css
+++ b/Main/MyApps.css
@@ -5,8 +5,6 @@
     border: none;
     cursor: pointer;
 }
-
-
 /*JUST CHANGES THE COLOR/FOCUS OF THE BUTTON SO THE USER NOTICES THEY'RE HOVERING IT.*/
 /*
 .dropPict:hover, .dropPict:focus {
@@ -14,17 +12,17 @@
 }
 
 */
-
-
 .dropdown_content {
 	margin-top: 9px;
     display: none;
     position: absolute;
     background-color: white;
-    min-width: 160px;
+    min-width: 60px;
     overflow: inherit;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+	text-align: center;
+	width: 180px;/*defines real width of dropbox*/
 	
 }
 
@@ -52,22 +50,20 @@
 
 	/*z-index: 1000;*/
 	position: absolute;
-	width: -320px;
-	margin-left: -285px;
-
-
+	/*width: -120px;*/
+	margin-left: -145px; /*moves box horizontaly*/
 	/*margin-left: -207px;*/
 	margin-top: 9px;
 	border: 1px solid #ccc !important;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-bottom: 10px;
+	padding-left: 0px;
+	padding-right: 0px;
+	padding-bottom: 0px;
 	cursor: default;
 }
 
 .dropdown_pin{
-	margin-top: -15px;
-	margin-left: 300px;
+	margin-top: -15px; /*moves pin verticaly*/
+	margin-left: 145px; /*moves pin horizontaly*/
 }
 
 .toggler_button {
